# ros2_policy_execution_pipeline

./: README.md
doc/: developer_guide.md
ros2_policy_execution_adapters/: CMakeLists.txt  README.md  package.xml
ros2_policy_execution_adapters/include/ros2_policy_execution_adapters/: ort_tensor_conversion.hpp
ros2_policy_execution_adapters/test/: test_ort_tensor_conversion.cpp
ros2_policy_execution_core/: CMakeLists.txt  README.md  package.xml
ros2_policy_execution_core/cmake/: FindONNXRUNTIME.cmake
ros2_policy_execution_core/examples/: ros2_preprocessor_value_example.cpp  value_types_basic_example.cpp
ros2_policy_execution_core/include/ros2_policy_execution_core/: inference_core.hpp  ort_value_conversion.hpp  postprocessor_core.hpp  preprocessor_core.hpp  preprocessor_support.hpp  value_types.hpp
ros2_policy_execution_core/include/ros2_policy_execution_core/tensor/: data_type.hpp  named_value_list.hpp  tensor_device.hpp  tensor_types.hpp  value_types.hpp
ros2_policy_execution_core/test/: test_ort_value_conversion.cpp  test_preprocessor_core.cpp  test_preprocessor_support.cpp  test_value_types.cpp
