<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_policy_execution_adapters</name>
  <version>0.0.0</version>
  <description>Optional inference adapters for ros2_policy_execution_core (ONNX Runtime tensor interop).</description>
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <maintainer email="juliajstein@gmail.com">Julia Jia</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_policy_execution_core</depend>
  <depend>onnxruntime_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
